--- a/bibtex/Master - kopie.bib
+++ b/bibtex/Master - kopie.bib
@@ -6599,6 +6599,9 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	file = {【Wikipedia】改善対象記事 - ハンJ Wiki:C\:\\Users\\stevi\\Juris-M\\storage\\D4VES4RH\\【Wikipedia】改善対象記事.html:text/html}
 }
 
+@misc{noauthor_notitle_nodate-3
+}
+
 @misc{5ch.net_eng._2019-1,
 	title = {Eng. 【{Korean} {Youtuber}】 {Destroying} a ticket for {Japan} at the airport "{This} is what a real boycot is like", ticket or hotel can not be canceled either [7/11]},
 	url = {http://lavender.5ch.net/test/read.cgi/news4plus/1562834476/},
@@ -6610,12 +6613,12 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	file = {【韓国人ユーチューバー】空港で日本行きのチケット破り捨てる「本当の不買運動とはこういうこと」券もホテルもキャンセル不可[7/11]:C\:\\Users\\stevi\\Juris-M\\storage\\HNZZE2P8\\browse.html:text/html}
 }
 
-@misc{daelyugnamtv_eng._2019,
+@misc{tv_[clark_tv]_eng._2019,
 	title = {Eng. "{I} tore a ticket of 1.35 million {Won}."},
 	url = {https://www.youtube.com/watch?v=sO7B6V0ho6M&feature=youtu.be},
 	language = {ja},
 	urldate = {2019-07-18},
-	author = {{daelyugnamTV}},
+	author = {{대륙남TV [clark tv]}},
 	month = jul,
 	year = {2019}
 }
@@ -6671,72 +6674,4 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	year = {2019},
 	note = {Ever since the end of World War II, relations between Japan and Korea have been frosty at best. No matter how many decades have passed, such dark stains in history have a tendency to linger in people’s minds. Take Korean YouTuber Hong Sung Hyuk, for example. Although his channel is generally lighthearted and…},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\NFYFHP4I\\popular-korean-youtuber-boycotts-japan-by-shredding-flight-ticket-to-pieces-at-airport.html:text/html}
-}
-
-@misc{hachima_kiko_eng:_2019,
-	title = {Eng: "{This} is what a real boycot is like!" {Korean} {Youtuber} takes the effort to destroy plane-ticket to {Japan} at the airport},
-	url = {http://blog.esuteru.com/archives/9345531.html},
-	language = {ja},
-	urldate = {2019-07-18},
-	author = {{Hachima Kiko}},
-	month = jul,
-	year = {2019},
-	file = {「本当の不買運動とはこういうことだ！」韓国人ユーチューバー、わざわざ購入した日本行きチケットを航空で破り捨てる \: はちま起稿:C\:\\Users\\stevi\\Juris-M\\storage\\DHM2REKB\\9345531.html:text/html}
-}
-
-@misc{arimoto_eng._2019,
-	type = {article.society.domestic},
-	title = {Eng. [{Arimoto} {Kaori}'s fighting poison with poison] "{The} {Cherry} {Blossom} {Viewing} {Party}” {An} amazing assertion by {Tokyo} {Shimbun}! {Right}, left, {Netto}-uyoku ... this scary writing, somewhere...?},
-	url = {https://www.zakzak.co.jp/soc/news/190419/soc1904190003-n1.html},
-	abstract = {先日土曜日（１３日）、東京の新宿御苑で、安倍晋三首相主催の「桜を見る会」が催された。この観桜会、筆者も毎年招待いただきながら、参加せずにきた。だが、今年は例年と…},
-	language = {ja},
-	urldate = {2019-07-18},
-	journal = {zakzak},
-	author = {Arimoto, Kaori},
-	month = apr,
-	year = {2019},
-	note = {先日土曜日（１３日）、東京の新宿御苑で、安倍晋三首相主催の「桜を見る会」が催された。この観桜会、筆者も毎年招待いただきながら、参加せずにきた。だが、今年は例年と…},
-	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\HIYJRW7B\\soc1904190003-n1.html:text/html}
-}
-
-@misc{mizuki_eng._2019,
-	title = {Eng. "{Korea}'s {Reaction}" '{Die}'. {Splashed} with gasoline... {The} catastrophe of 33 deaths at {Kyoto} {Animation} {Arson} attack},
-	url = {http://oboega-01.blog.jp/archives/1075264814.html},
-	abstract = {海外の反応ブログ。韓国でのメディア報道および韓国人の反応を翻訳して紹介しています。慰安婦問題の真実を追究し、朝日新聞の捏造を糾弾し続けたいです},
-	language = {ja},
-	urldate = {2019-07-19},
-	journal = {【韓国の反応】みずきの女子知韓宣言（´∀｀*)},
-	author = {{Mizuki}},
-	month = jul,
-	year = {2019},
-	note = {「死ね」ガソリンぶっかけ···日京アニ放火で33人が死亡大惨事},
-	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\6ZXVUMH3\\1075264814.html:text/html}
-}
-
-@misc{tanaka_eng._2019,
-	title = {Eng. {A} mysterious booklet distributed by {LDP} headquarters to parliamentarians has repercussions. "{We} were handed these over for the purpose of speeches and briefing sessions," said the {Diet}'s office},
-	url = {https://www.huffingtonpost.jp/entry/story_jp_5d105e35e4b0aa375f4f0458},
-	abstract = {6月11日に自民党の小野田紀美・参院議員のTwitterに投稿された『フェイク情報が蝕むニッポン トンデモ野党とメディアの非常識』という冊子。自民党本部が参考図書として全国会議員に配布している。},
-	language = {ja},
-	urldate = {2019-07-20},
-	journal = {ハフポスト},
-	author = {Tanaka, Shino},
-	month = jun,
-	year = {2019},
-	note = {6月11日に自民党の小野田紀美・参院議員のTwitterに投稿された『フェイク情報が蝕むニッポン　トンデモ野党とメディアの非常識』という冊子。自民党本部が参考図書として全国会議員に配布している。},
-	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\VJSEKWT7\\story_jp_5d105e35e4b0aa375f4f0458.html:text/html}
-}
-
-@misc{bungeishunju_editorial_department_eng._2019,
-	title = {Eng. {Shibata} {Shigeru} rages, {LDP} headquarters distributes "{Neto}-uyo book" to all members},
-	url = {https://bunshun.jp/articles/-/12725},
-	abstract = {まずは、以下の文章をお読みいただきたい。〈「オワコン」という言葉があります。（略）一般ユーザー、個人ユーザーに飽きられてしまい、見捨てられてブームが去り、流行遅れになった漫画やアニメ、商品・サービスの…},
-	language = {ja},
-	urldate = {2019-07-20},
-	journal = {文春オンライン},
-	author = {{Bungeishunjū editorial department}},
-	month = jul,
-	year = {2019},
-	note = {まずは、以下の文章をお読みいただきたい。〈「オワコン」という言葉があります。（略）一般ユーザー、個人ユーザーに飽きられてしまい、見捨てられてブームが去り、流行遅れになった漫画やアニメ、商品・サービスの…},
-	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\PVPNC28Y\\12725.html:text/html}
 }
