--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -1140,13 +1140,13 @@ Zaitokukai broadcast live on-line ?!},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\DMXQ99R3\\japans-cyber-nationalists-are-convinced-that-mers-started-in-korea.html:text/html}
 }
 
-@article{rumi_koreans_2011,
+@article{sakamoto_koreans_2011,
 	series = {The {Asia}-{Pacific} {Journal}},
 	title = {'{Koreans}, {Go} {Home}!' {Internet} {Nationalism} in {Contemporary} {Japan} as a {Digitally} {Mediated} {Subculture} {\textbar} {The} {Asia}-{Pacific} {Journal}: {Japan} {Focus}},
 	volume = {Volume 9, Issue 10, Number 2},
 	url = {http://apjjf.org/2011/9/10/Rumi-SAKAMOTO/3497/article.html},
 	urldate = {2016-03-16},
-	author = {Rumi, Sakamoto},
+	author = {Sakamoto, Rumi},
 	month = mar,
 	year = {2011},
 	note = {Artikel over het online exclusieve discourse gehanteerd door de netouyo, op sites als 2-channeru. Koppelt het het aan de sociale problemen die gepaard gaan met de economische stagnatie en het Shinzo Abe beleid. Argument dat bepaalde aspecten van het internet in Japan bijdragen tot een nieuw soort nationalisme of toch zeker nieuw leven blazen in een historisch nationalisme sluiten aan bij mijn punt. Uitgebreide, nuttige referentielijst. Gegrond in allerlei andere studies over nationalisme en het internet. Waarschijnlijk een van de belangrijkste bronnen in mijn paper.},
@@ -6178,7 +6178,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	publisher = {Routledge},
 	editor = {Atkinson, Christopher L.},
 	year = {2019},
-	keywords = {Case studies, Policy sciences, Political aspects, Political planning, Semiotics},
+	keywords = {Political aspects, Case studies, Policy sciences, Political planning, Semiotics},
 	annote = {Introduction -- Semiotic analysis and public policy : theory and practice -- On filth : food regulation, enforcement, and cheese -- A semiotic analysis of green public procurement -- New York City's conflicts of interest law : compliance versus ethical capacity -- Symbol and substance in local government workforce development : "first source" hiring programs -- By soil, blood, and administration : a narrative analysis of German immigration law -- Reforming the Affordable Care Act : a semiotic analysis of tweets using LIWC -- Economic and energy development and the goal of sustainability in Thailand : an argumentation analysis -- Bridging the gap between Intent and practice}
 }
 
@@ -6249,7 +6249,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	publisher = {Viking},
 	author = {Markoff, John},
 	year = {2005},
-	keywords = {Computers and civilization, History, Microcomputers, Nineteen sixties}
+	keywords = {History, Computers and civilization, Microcomputers, Nineteen sixties}
 }
 
 @misc{silverman_meet_2017,
@@ -6259,7 +6259,7 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	language = {en},
 	urldate = {2019-07-13},
 	journal = {BuzzFeed News},
-	author = {SIlverman, Craig and Lytvynenko, Jane},
+	author = {Silverman, Craig and Lytvynenko, Jane},
 	month = feb,
 	year = {2017},
 	note = {Jim Watkins wants to make The Goldwater the pre-eminent news source for the trolls of 8chan.},
@@ -6739,4 +6739,141 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	year = {2019},
 	note = {まずは、以下の文章をお読みいただきたい。〈「オワコン」という言葉があります。（略）一般ユーザー、個人ユーザーに飽きられてしまい、見捨てられてブームが去り、流行遅れになった漫画やアニメ、商品・サービスの…},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\PVPNC28Y\\12725.html:text/html}
+}
+
+@misc{broderick_this_2018,
+	title = {This {Is} {How} {We} {Radicalized} {The} {World}},
+	url = {https://www.buzzfeednews.com/article/ryanhatesthis/brazil-jair-bolsonaro-facebook-elections},
+	abstract = {On Sunday, far-right evangelical Jair Bolsonaro was elected president of Brazil. The era of being surprised at this kind of politics is over. Now we have to live with what we've done.},
+	language = {en},
+	urldate = {2019-07-20},
+	journal = {BuzzFeed News},
+	author = {Broderick, Ryan},
+	month = oct,
+	year = {2018},
+	note = {On Sunday, far-right evangelical Jair Bolsonaro was elected president of Brazil. The era of being surprised at this kind of politics is over. Now we have to live with what we've done.},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\S8TZXIZK\\brazil-jair-bolsonaro-facebook-elections.html:text/html}
+}
+
+@book{sunstein_republic.com_2007,
+	address = {Princeton},
+	title = {Republic.com 2.0},
+	isbn = {978-0-691-13356-0},
+	publisher = {Princeton University Press},
+	author = {Sunstein, Cass R.},
+	year = {2007},
+	note = {OCLC: ocm85783329},
+	keywords = {Internet, Political aspects, Social aspects, Democracy, Political participation, Information society, Computer network resources},
+	annote = {The daily me -- An analogy and an ideal -- Polarization and cybercascades -- Social glue and spreading information -- Citizens -- Blogs -- What's regulation? a plea -- Freedom of speech -- Policies and proposals -- Republic.com}
+}
+
+@misc{noauthor_19_nodate,
+	title = {(19) 生産性ゼロ人間 on {Twitter}: "高校生ぐらいの時からまとめサイトの影響で「民主＝無能 中国＝悪い奴」という考えをなんとなく身につけていた。大学に入ってからもどっぷり浸かる事はなかったが、ネトウヨに片足突っ込んでた冷笑ウヨだった。だが次第に自分は何も考えずまとめサイトに扇動されてるのではと気づいた \#脱ネトウヨ体験" / {Twitter}},
+	shorttitle = {(19) 生産性ゼロ人間 on {Twitter}},
+	url = {https://twitter.com/productivity_0/status/1024815831815839744},
+	language = {en},
+	urldate = {2019-07-21},
+	journal = {Twitter},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\US4TDZP3\\1024815831815839744.html:text/html}
+}
+
+@article{sieg_under_2015,
+	title = {Under {Abe}'s reign, media self-censorship in {Japan} is rising},
+	issn = {0447-5763},
+	url = {https://www.japantimes.co.jp/news/2015/02/25/national/media-national/japanese-media-self-censorship-seen-growing-abes-reign/},
+	abstract = {Worries are growing in Japan about a trend toward media self-censorship as journalists and experts say news organizations are toning down criticism of Prim},
+	language = {en-US},
+	urldate = {2019-07-21},
+	journal = {The Japan Times Online},
+	author = {Sieg, Linda},
+	month = feb,
+	year = {2015},
+	file = {Japan Times Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\Z3BEKMNA\\japanese-media-self-censorship-seen-growing-abes-reign.html:text/html}
+}
+
+@article{tsuji_eng._2017,
+	title = {Eng. {Profile} of "{Netto}-{Uyoku}" as seen from measurement surveys: {Based} on the analysis results of 2007/2014 web surveys},
+	volume = {38},
+	url = {https://ir.library.osaka-u.ac.jp/repo/ouka/all/60471/ahs38_211.pdf},
+	language = {ja},
+	urldate = {2019-07-21},
+	journal = {Humanities Annual Report},
+	author = {Tsuji, Daisuke},
+	month = mar,
+	year = {2017},
+	pages = {P.211--P.224},
+	file = {ahs38_211.pdf:C\:\\Users\\stevi\\Juris-M\\storage\\F4JGXQU6\\ahs38_211.pdf:application/pdf}
+}
+
+@misc{tokyo_shimbun_tokyo_2013,
+	title = {Tokyo {Shimbun}: {LDP} · {Hirai} posted online on the {Diet} {Party} {Debate} - to {Mr}. {Fukushima} "{Shut} up, hag"},
+	shorttitle = {東京新聞},
+	url = {https://web.archive.org/web/20130629083403/http://www.tokyo-np.co.jp/article/politics/news/CK2013062902000121.html},
+	language = {ja},
+	urldate = {2019-07-23},
+	author = {{Tokyo Shimbun}},
+	month = jun,
+	year = {2013},
+	file = {東京新聞\:自民・平井氏ネット党首討論に投稿　福島氏に「黙れ、ばばあ」\:政治(TOKYO Web):C\:\\Users\\stevi\\Juris-M\\storage\\SW85Z3RF\\CK2013062902000121.html:text/html}
+}
+
+@article{sakamoto_koreans_2011-1,
+	title = {'{Koreans}, {Go} {Home}!' {Internet} {Nationalism} in {Contemporary} {Japan} as a {Digitally} {Mediated} {Subculture}},
+	volume = {9},
+	language = {en},
+	number = {10},
+	journal = {The Asia-Pacific Journal},
+	author = {Sakamoto, Rumi},
+	month = mar,
+	year = {2011},
+	pages = {20},
+	file = {Sakamoto - におけるデジタル方式下位文化としてのインターネット・ナショナリ ズム.pdf:C\:\\Users\\stevi\\Juris-M\\storage\\MQPYVPGL\\Sakamoto - におけるデジタル方式下位文化としてのインターネット・ナショナリ ズム.pdf:application/pdf}
+}
+
+@article{soble_right-wing_2017,
+	chapter = {Business},
+	title = {Right-{Wing} {Hoteliers} in {Japan} {Anger} {China} {With} {Radical} {Historical} {Views}},
+	issn = {0362-4331},
+	url = {https://www.nytimes.com/2017/01/19/business/japan-china-motoya-hotel-apa.html},
+	abstract = {Fumiko and Toshio Motoya, founders of the APA Group and defenders of Japan’s wartime conduct, provoked threats of a boycott over a book promoted at their chain.},
+	language = {en-US},
+	urldate = {2019-07-23},
+	journal = {The New York Times},
+	author = {Soble, Jonathan},
+	month = jan,
+	year = {2017},
+	note = {Fumiko and Toshio Motoya, founders of the APA Group and defenders of Japan’s wartime conduct, provoked threats of a boycott over a book promoted at their chain.},
+	keywords = {APA Group, China, Hotels and Travel Lodgings, International Relations, Japan, Motoya, Fumiko, Motoya, Toshio, Nanjing Massacre, World War II (1939-45)}
+}
+
+@article{benedictus_invasion_2016,
+	chapter = {Media},
+	title = {Invasion of the troll armies: ‘{Social} media where the war goes on’},
+	issn = {0261-3077},
+	shorttitle = {Invasion of the troll armies},
+	url = {https://www.theguardian.com/media/2016/nov/06/troll-armies-social-media-trump-russian},
+	abstract = {Governments all over the world are manipulating social media for their own ends. That’s where the digital footsoldiers come in – smearing opponents, spreading disinformation and posting fake texts for ‘pocket money’},
+	language = {en-GB},
+	urldate = {2019-07-23},
+	journal = {The Guardian},
+	author = {Benedictus, Leo},
+	month = nov,
+	year = {2016},
+	note = {Governments all over the world are manipulating social media for their own ends. That’s where the digital footsoldiers come in – smearing opponents, spreading disinformation and posting fake texts for ‘pocket money’},
+	keywords = {China, Digital media, Internet, Media, Russia, Social media, Technology, Twitter, UK news},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\2AFF6W6R\\troll-armies-social-media-trump-russian.html:text/html}
+}
+
+@misc{harding_japan_2017,
+	title = {Japan passes pre-emptive anti-terrorism law},
+	url = {https://www.ft.com/content/75130598-5181-11e7-bfb8-997009366969},
+	abstract = {Campaigners say conspiracy measure threatens privacy and civil rights},
+	language = {en-GB},
+	urldate = {2019-07-24},
+	journal = {Financial Times},
+	author = {Harding, Robin},
+	month = jun,
+	year = {2017},
+	note = {Campaigners say conspiracy measure threatens privacy and civil rights},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\3KR4VC2Q\\75130598-5181-11e7-bfb8-997009366969.html:text/html}
 }
