--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -6877,3 +6877,225 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	note = {Campaigners say conspiracy measure threatens privacy and civil rights},
 	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\3KR4VC2Q\\75130598-5181-11e7-bfb8-997009366969.html:text/html}
 }
+
+@book{kitada_eng:_2005,
+	title = {Eng: {Sneering} {Japan}'s '{Nationalism}'},
+	isbn = {978-4-14-091024-5},
+	language = {Japanese},
+	publisher = {NHKブックス},
+	author = {Kitada, Akihiro},
+	month = feb,
+	year = {2005},
+	note = {OCLC: 992501447}
+}
+
+@book{mcluhan_gutenberg_2011,
+	address = {Toronto ; Buffalo},
+	edition = {1st ed},
+	title = {The {Gutenberg} galaxy: the making of typographic man},
+	isbn = {978-1-4426-1269-3},
+	shorttitle = {The {Gutenberg} galaxy},
+	publisher = {University of Toronto Press},
+	author = {McLuhan, Marshall and Gordon, W. Terrence and Lamberti, Elena and Scheffel-Dunand, Dominique},
+	year = {2011},
+	note = {OCLC: ocn761853034},
+	keywords = {Communication and culture, Printing, Technology and civilization},
+	annote = {W. Terrence Gordon -- Elena Lamberti -- Dominique Scheffel-Dunand -- McLuhan's compass for the voyage to a world of electric words / Not just a book on media : extending The Gutenberg galaxy / The invisible and the visible : intertwining figure and ground in The Gutenberg galaxy / The Gutenberg galaxy -- The galaxy reconfigured}
+}
+
+@misc{net_norikoe_2015,
+	title = {Norikoe {Net} co-representatives},
+	url = {https://norikoenet.jp/about_us/representative/},
+	abstract = {石井ポンペ（原住アイヌ民族の権利を取り戻すウコチャランケの会代表） １９４５年生まれ。 アイヌ協会札幌支部の結成に参加。 北海道アイヌ協会札幌支部長、支部役員を歴任。 石狩カムイノム実行委員会代表。 インカルシペ・ヌプリ・カムイノミ実行委員会祭司。 ムックリ、トンコリの演奏、木工などのアイヌ民族の文化の担い手。},
+	language = {ja},
+	urldate = {2019-07-27},
+	journal = {Norikoe Net},
+	author = {Net, Norikoe},
+	month = may,
+	year = {2015},
+	note = {石井ポンペ（原住アイヌ民族の権利を取り戻すウコチャランケの会代表） １９４５年生まれ。 アイヌ協会札幌支部の結成に参加。 北海道アイヌ協会札幌支部長、支部役員を歴任。 石狩カムイノム実行委員会代表。 インカルシペ・ヌプリ・カムイノミ実行委員会祭司。 ムックリ、トンコリの演奏、木工などのアイヌ民族の文化の担い手。 １９９２年にサハリンを訪問し、サハリンアイヌ、北方諸民族とも交流。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\93XTFKSA\\representative.html:text/html}
+}
+
+@article{fackler_8_2013,
+	chapter = {World},
+	title = {8 {Arrested} in {Tokyo} {Fights} {Involving} {Anti}-{Korean} {Group}},
+	issn = {0362-4331},
+	url = {https://www.nytimes.com/2013/06/18/world/asia/8-arrested-in-tokyo-fights-involving-anti-korean-group.html},
+	abstract = {Fistfights broke out between ultranationalist Japanese shouting anti-Korean slogans and counterprotesters on the streets of Tokyo, where public violence is rare.},
+	language = {en-US},
+	urldate = {2019-07-28},
+	journal = {The New York Times},
+	author = {Fackler, Martin},
+	month = jun,
+	year = {2013},
+	note = {Fistfights broke out between ultranationalist Japanese shouting anti-Korean slogans and counterprotesters on the streets of Tokyo, where public violence is rare.},
+	keywords = {Fackler, Martin, Japan, Police, South Korea, Tokyo (Japan)}
+}
+
+@misc{sankei_digital_inc_eng._2017,
+	type = {entertainments},
+	title = {Eng. [{Tokyo} {MX} {Girls} {News} problem] {Publicity} of program's inspection: is the question "{Why} are {Koreans} doing a counter-movement?" hate speech?},
+	url = {https://www.sankei.com/entertainments/news/170313/ent1703130013-n1.html},
+	abstract = {沖縄の米軍基地反対運動を扱った内容に批判が出た東京ＭＸテレビ（ＭＸ）の番組「ニュース女子」について、同番組を手がけるＤＨＣシアターが独自に制作した検証番組が１３…},
+	language = {ja},
+	urldate = {2019-07-28},
+	journal = {Sankei News},
+	author = {{SANKEI DIGITAL INC}},
+	month = mar,
+	year = {2017},
+	note = {沖縄の米軍基地反対運動を扱った内容に批判が出た東京ＭＸテレビ（ＭＸ）の番組「ニュース女子」について、同番組を手がけるＤＨＣシアターが独自に制作した検証番組が１３…},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\J4HEUBMM\\ent1703130013-n1.html:text/html}
+}
+
+@book{baudrillard_simulacra_1994,
+	address = {Ann Arbor},
+	series = {The {Body}, in theory},
+	title = {Simulacra and simulation},
+	isbn = {978-0-472-09521-6 978-0-472-06521-9},
+	language = {eng},
+	publisher = {University of Michigan Press},
+	author = {Baudrillard, Jean},
+	year = {1994},
+	keywords = {Reality, Resemblance (Philosophy)}
+}
+
+@misc{alexa_alexa_2019,
+	title = {Alexa - {Nicovideo} {Competitive} {Analysis}, {Marketing} {Mix} and {Traffic}},
+	url = {https://www.alexa.com/siteinfo/nicovideo.jp},
+	urldate = {2019-07-28},
+	journal = {Alexa},
+	author = {{Alexa}},
+	year = {2019},
+	file = {Alexa - Nicovideo Competitive Analysis, Marketing Mix and Traffic:C\:\\Users\\stevi\\Juris-M\\storage\\93GD7SJF\\nicovideo.html:text/html}
+}
+
+@misc{abe_1_2012,
+	title = {(1) {Shinzo} {Abe}-{The} election to decide the future of {Japan} will start  tomorrow. {Rising} {China} will not hide from {Japan} its territorial ambitions ...},
+	url = {https://www.facebook.com/photo.php?fbid=272889402834510&set=a.131635893626529&type=1&theater},
+	language = {ja},
+	urldate = {2019-07-28},
+	author = {Abe, Shinzō},
+	month = dec,
+	year = {2012},
+	file = {(1) 安倍晋三 - 明日からいよいよ日本の未来を決める選挙が始まります。 台頭する中国は、日本への領土的野心を隠そうとはしません。...:C\:\\Users\\stevi\\Juris-M\\storage\\7J9KVGRG\\photo.html:text/html}
+}
+
+@article{wang_how_2019,
+	title = {How {Twitter} {Became} {Ubiquitous} in {Japan}},
+	url = {https://www.bloomberg.com/news/articles/2019-05-16/how-twitter-became-ubiquitous-in-japan},
+	abstract = {Rising ad dollars from Japan has bolstered the company’s total revenue},
+	language = {en},
+	urldate = {2019-07-28},
+	author = {Wang, Selina},
+	month = may,
+	year = {2019},
+	note = {Rising ad dollars from Japan has bolstered the company’s total revenue},
+	keywords = {Advertising, Apps, Culture, FACEBOOK INC-CLASS A, Infrastructure, Japan, Smartphone, Social Media, technology, Tokyo, TWITTER INC},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\IH42IGTC\\how-twitter-became-ubiquitous-in-japan.html:text/html}
+}
+
+@misc{the_asahi_shimbun_constitutional_2019,
+	title = {Constitutional revision one of key issues in {July} election, says {Abe}：{The} {Asahi} {Shimbun}},
+	url = {http://www.asahi.com/ajw/articles/AJ201907010025.html},
+	abstract = {Prime Minister Shinzo Abe is pitching his pet project of constitutional revision as one of the overr},
+	language = {en},
+	urldate = {2019-07-29},
+	journal = {The Asahi Shimbun},
+	author = {{The Asahi Shimbun}},
+	month = jul,
+	year = {2019},
+	note = {Prime Minister Shinzo Abe is pitching his pet project of constitutional revision as one of the overr},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\5G4KM4EW\\AJ201907010025.html:text/html}
+}
+
+@misc{nicovideo.jp_monthly_2019,
+	title = {Monthly net public opinion poll ({March} 2019)},
+	url = {https://enquete.nicovideo.jp/result/180#answers},
+	abstract = {今回は3月19日21:37に実施しました。},
+	language = {ja},
+	urldate = {2019-07-29},
+	journal = {ニコニコアンケート},
+	author = {{Nicovideo.jp}},
+	month = mar,
+	year = {2019},
+	note = {普段の生活や仕事で主に元号を使うか、西暦を使うか、など12問のネット世論調査を実施}
+}
+
+@misc{aizawa_accommodating_2016,
+	title = {Accommodating youth and women in a silver democracy},
+	copyright = {http://www.anu.edu.au/copyright/},
+	url = {https://ajrc.crawford.anu.edu.au/department-news/10385/accommodating-youth-and-women-silver-democracy},
+	language = {en},
+	urldate = {2019-07-29},
+	journal = {Australia-Japan Research Centre},
+	author = {Aizawa, Nobuhiro},
+	month = sep,
+	year = {2016},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\36BBIWZD\\accommodating-youth-and-women-silver-democracy.html:text/html}
+}
+
+@incollection{hollihan_how_2014,
+	address = {New York},
+	title = {How the {Japanese} {Social} {Media} {Users} {Discussed} the {Senkaku} {Controversy}},
+	isbn = {978-1-349-49534-4 978-1-137-44336-6},
+	url = {http://link.springer.com/10.1057/9781137443366_7},
+	language = {en},
+	urldate = {2019-07-30},
+	booktitle = {The {Dispute} {Over} the {Diaoyu}/{Senkaku} {Islands}},
+	publisher = {Palgrave Macmillan US},
+	author = {Murai, Shusuke and Suzuki, Takeshi},
+	editor = {Hollihan, Thomas A.},
+	year = {2014},
+	doi = {10.1057/9781137443366_7},
+	pages = {169--199}
+}
+
+@misc{2ch.net_eng._2012,
+	title = {Eng. {Abe} "{The} level of comments on {NHK} is too low. {A} level that can not be shown in public. {There} are even those {I} completely destroyed ({Kiriri})},
+	url = {https://engawa.5ch.net/test/read.cgi/poverty/1356187480/},
+	language = {ja},
+	urldate = {2019-07-30},
+	author = {{2ch.net}},
+	month = dec,
+	year = {2012},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\MIDBRDRT\\1356187480.html:text/html}
+}
+
+@misc{kashiwagi_japan_2019,
+	title = {Japan ruling party distributes ‘anti-gaffe’ guide after litany of blunders - {The} {Washington} {Post}},
+	url = {https://www.washingtonpost.com/world/2019/05/15/japan-ruling-party-distributes-anti-gaffe-guide-after-litany-blunders/?utm_term=.5c6602843159},
+	urldate = {2019-07-30},
+	journal = {The Washington Post},
+	author = {Kashiwagi, Akiko},
+	month = may,
+	year = {2019},
+	file = {Japan ruling party distributes ‘anti-gaffe’ guide after litany of blunders - The Washington Post:C\:\\Users\\stevi\\Juris-M\\storage\\RIPK3FZW\\japan-ruling-party-distributes-anti-gaffe-guide-after-litany-blunders.html:text/html}
+}
+
+@misc{sakurasotv_eng._2009,
+	title = {Eng. 【{Abe} {Shinzo}】 {Future} {Japan} and {Mass} {Media} {Problems} [{Sakura} {H}21 / 6/11]-{YouTube}},
+	url = {https://www.youtube.com/watch?v=twjpMjtoBRk},
+	language = {ja},
+	urldate = {2019-07-30},
+	author = {{SakuraSoTV}},
+	month = jun,
+	year = {2009},
+	file = {【安倍晋三】これからの日本とマスメディア問題[桜 H21/6/11] - YouTube:C\:\\Users\\stevi\\Juris-M\\storage\\MP6D3XZB\\watch.html:text/html}
+}
+
+@article{kahn_riot_2005,
+	chapter = {World},
+	title = {Riot {Police} {Called} {In} to {Calm} {Anti}-{Japanese} {Protests} in {China}},
+	issn = {0362-4331},
+	url = {https://www.nytimes.com/2005/04/10/world/riot-police-called-in-to-calm-antijapanese-protests-in-china.html},
+	abstract = {Mass demonstrations in Beijing against Japan turn unruly and protesters try to storm Japanese ambassador's residence before riot police break up confrontation; estimated 10,000 demonstrators join march calling for boycott of Japanese goods, making it one of largest protest events authorized by government in years, but gatherings at embassy and ambassador's residence seem to be unauthorized; Japan's vice foreign minister makes official protest against violence (M)},
+	language = {en-US},
+	urldate = {2019-07-30},
+	journal = {The New York Times},
+	author = {Kahn, Joseph},
+	month = apr,
+	year = {2005},
+	note = {Mass demonstrations in Beijing against Japan turn unruly and protesters try to storm Japanese ambassador's residence before riot police break up confrontation; estimated 10,000 demonstrators join march calling for boycott of Japanese goods, making it one of largest protest events authorized by government in years, but gatherings at embassy and ambassador's residence seem to be unauthorized; Japan's vice foreign minister makes official protest against violence (M)},
+	keywords = {Beijing (china), Boycotts, China, Demonstrations and Riots, Foreign Service, Japan}
+}
