--- a/bibtex/Master.bib
+++ b/bibtex/Master.bib
@@ -7099,3 +7099,30 @@ Prime Minister Yamamoto Gonnohyōe took responsibility for the lapse in security
 	note = {Mass demonstrations in Beijing against Japan turn unruly and protesters try to storm Japanese ambassador's residence before riot police break up confrontation; estimated 10,000 demonstrators join march calling for boycott of Japanese goods, making it one of largest protest events authorized by government in years, but gatherings at embassy and ambassador's residence seem to be unauthorized; Japan's vice foreign minister makes official protest against violence (M)},
 	keywords = {Beijing (china), Boycotts, China, Demonstrations and Riots, Foreign Service, Japan}
 }
+
+@misc{furuya_eng._2015,
+	title = {Eng. {The} {Rise} of the '{Netto}-{Uyoku}' and the {Truth} of {Japan}'s '{Rightward} trend'},
+	url = {https://www.nippon.com/ja/currents/d00208/},
+	abstract = {最近の日本社会では、嫌韓・嫌中の「ネット右翼」が存在感を増し、ヘイトスピーチの広がりも懸念されている。「ネット右翼」とは実際どんな人たちで、今後さらに勢力を伸ばすのか。その実像に迫る。},
+	language = {ja},
+	urldate = {2019-08-01},
+	journal = {nippon.com},
+	author = {Furuya, Tsunehiro},
+	month = dec,
+	year = {2015},
+	note = {最近の日本社会では、嫌韓・嫌中の「ネット右翼」が存在感を増し、ヘイトスピーチの広がりも懸念されている。「ネット右翼」とは実際どんな人たちで、今後さらに勢力を伸ばすのか。その実像に迫る。},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\CNR97M2E\\d00208.html:text/html}
+}
+
+@misc{oxforddictionaries.com_ideology_2019,
+	title = {Ideology {\textbar} {Definition} of ideology in {English} by {Oxford} {Dictionaries}},
+	url = {https://en.oxforddictionaries.com/definition/ideology},
+	abstract = {Definition of ideology - A system of ideas and ideals, especially one which forms the basis of economic or political theory and policy., The},
+	language = {en},
+	urldate = {2019-08-01},
+	journal = {Oxford Dictionaries {\textbar} English},
+	author = {{oxforddictionaries.com}},
+	year = {2019},
+	note = {Definition of ideology - A system of ideas and ideals, especially one which forms the basis of economic or political theory and policy., The},
+	file = {Snapshot:C\:\\Users\\stevi\\Juris-M\\storage\\BIQE4EIY\\ideology.html:text/html}
+}
